--- a/app/src/main/res/layout/activity_saved_quiz.xml
+++ b/app/src/main/res/layout/activity_saved_quiz.xml
@@ -7,17 +7,16 @@
     tools:context=".SavedQuiz"
     android:orientation="vertical">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/QuizBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
     <ListView
         android:id="@+id/SavedQuizList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1" />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:text="Tap to enter quiz and hold to delete"/>
 
     <Button
         android:id="@+id/ToQuizMod"
